@@ -39,8 +39,6 @@ INCLUDES = \
 
 libgnome_2_la_SOURCES = \
 	gnome-program.c		\
-	gnome-gconf.c		\
-	gnome-oaf.c		\
 	gnome-config.c		\
 	gnome-ditem.c		\
 	gnome-exec.c		\
@@ -58,8 +56,6 @@ libgnome_2_la_SOURCES = \
 
 libgnome_headers = \
 	gnome-program.h		\
-	gnome-gconf.h		\
-	gnome-oaf.h		\
         gnome-config.h 		\
 	gnome-defs.h   		\
 	gnome-fileconvert.h	\
